--- a/style.css
+++ b/style.css
@@ -1,10 +1,56 @@
 
 body {
-    font: Light 300;
-    background-color: white;
+    background: #eee;
+    font-family: Arial, light 300;
 }
 
-.header {
-    background-color: black;
-    justify-content: row;
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: #000000;
+    color: #fff;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+nav li {
+    margin-right: 20px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: bold;
+}
+
+header {
+    background-color: #333;
+}
+
+.theater-image {
+    position: relative;
+}
+
+.theater-image img {
+    width: 100%;
+    height: auto;
+    display: block;
+}
+
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    font: light 300;
+    font-size: 3em;
 }
