--- a/style.css
+++ b/style.css
@@ -62,6 +62,11 @@ header {
     display: flex;
     flex-direction: column;
     text-align: center;
+    padding: 40px;
+    margin-left: 20%;
+    margin-right: 20%;
+    border-radius: 10px;
+    box-shadow: #fff;
 }
 
 .tickets {
@@ -69,7 +74,13 @@ header {
     margin: 20px auto;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+}
+
+
+.ticket-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .ticket-box {
@@ -78,35 +89,30 @@ header {
     align-items: flex-start;
     padding: 15px;
     margin: 10px 0;
-    width: 80%;
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-
-.ticket-image {
-    max-width: 150px;
+.ticket-img {
+    max-width: 200px;
     margin-right: 20px;
 }
 
+
 .ticket-info {
-    flex: 1; 
+    display: flex;
     flex-direction: column;
-    justify-content: flex-start; 
+    justify-content: flex-start;
 }
 
-.ticket-info h3 {
-    margin: 0 0 10px;
-}
-
-.ticket-info p {
+.ticket-info h3,
+.ticket-info p,
+.ticket-info .show-price {
     margin: 5px 0;
 }
-
-.price {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin: 10px 0;
-}
-
 
 .read-more-button {
     align-self: flex-start;
